# openapi/spec/cloud-openapi.yaml
@@ -84,8 +84,6 @@ paths:
     $ref: paths/api@firewall@rules.yaml
   /api/firewall/rules/{id}:
     $ref: paths/api@firewall@rules@{id}.yaml
-  /api/register:
-    $ref: paths/api@register.yaml
   /api/user/resend_email:
     $ref: paths/api@user@resend_email.yaml
   /api/user/{uid}/update_password:
@@ -128,20 +126,6 @@ paths:
     $ref: paths/api@user@mfa@reset@{user-id}.yaml
   /api/user:
     $ref: paths/api@user.yaml
-  /api/namespaces/{tenant}/invitations/links:
-    $ref: paths/api@namespaces@{tenant}@invitations@links.yaml
-  /api/namespaces/{tenant}/members/{id}/accept-invite:
-    $ref: paths/api@namespaces@{tenant}@members@{id}@accept-invite.yaml
-  /api/namespaces/{tenant}/invitations/accept:
-    $ref: paths/api@namespaces@{tenant}@invitations@accept.yaml
-  /api/namespaces/{tenant}/invitations/decline:
-    $ref: paths/api@namespaces@{tenant}@invitations@decline.yaml
-  /api/namespaces/{tenant}/invitations/{user-id}:
-    $ref: paths/api@namespaces@{tenant}@invitations@{user-id}.yaml
-  /api/namespaces/{tenant}/invitations:
-    $ref: paths/api@namespaces@{tenant}@invitations.yaml
-  /api/users/invitations:
-    $ref: paths/api@users@invitations.yaml
   /api/namespaces/{tenant}/support:
     $ref: paths/api@namespaces@{tenant}@support.yaml
   /api/web-endpoints:
